syntax = "proto3";

package ccm.daemon;

service CcmDaemon {
    // Repo management
    rpc AddRepo(AddRepoRequest) returns (RepoInfo);
    rpc ListRepos(Empty) returns (ListReposResponse);
    rpc RemoveRepo(RemoveRepoRequest) returns (Empty);

    // Worktree management
    rpc ListWorktrees(ListWorktreesRequest) returns (ListWorktreesResponse);
    rpc CreateWorktree(CreateWorktreeRequest) returns (WorktreeInfo);
    rpc RemoveWorktree(RemoveWorktreeRequest) returns (Empty);
    rpc DeleteBranch(DeleteBranchRequest) returns (Empty);

    // Session management
    rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse);
    rpc CreateSession(CreateSessionRequest) returns (SessionInfo);
    rpc RenameSession(RenameSessionRequest) returns (SessionInfo);
    rpc DestroySession(DestroySessionRequest) returns (Empty);

    // Attach/Detach
    rpc AttachSession(stream AttachInput) returns (stream AttachOutput);

    // Event subscription (real-time updates)
    rpc SubscribeEvents(SubscribeEventsRequest) returns (stream Event);

    // Diff operations
    rpc GetDiffFiles(GetDiffFilesRequest) returns (GetDiffFilesResponse);
    rpc GetFileDiff(GetFileDiffRequest) returns (GetFileDiffResponse);
}

message Empty {}

// ============ Repo ============

message AddRepoRequest {
    string path = 1;  // Path to git repository
}

message RemoveRepoRequest {
    string id = 1;
}

message ListReposResponse {
    repeated RepoInfo repos = 1;
}

message RepoInfo {
    string id = 1;
    string name = 2;
    string path = 3;
    int32 session_count = 4;
}

// ============ Worktree ============

message ListWorktreesRequest {
    string repo_id = 1;
}

message ListWorktreesResponse {
    repeated WorktreeInfo worktrees = 1;
}

message CreateWorktreeRequest {
    string repo_id = 1;
    string branch = 2;
    optional string base_branch = 3;  // Branch to create from (if branch doesn't exist)
}

message RemoveWorktreeRequest {
    string repo_id = 1;
    string branch = 2;
}

message DeleteBranchRequest {
    string repo_id = 1;
    string branch = 2;
}

message WorktreeInfo {
    string repo_id = 1;
    string branch = 2;
    string path = 3;
    bool is_main = 4;
    int32 session_count = 5;
}

// ============ Session ============

message ListSessionsRequest {
    optional string repo_id = 1;    // Filter by repo
    optional string branch = 2;     // Filter by branch
}

message ListSessionsResponse {
    repeated SessionInfo sessions = 1;
}

message CreateSessionRequest {
    string repo_id = 1;
    string branch = 2;
    optional string name = 3;  // Custom name (optional)
}

message RenameSessionRequest {
    string session_id = 1;
    string new_name = 2;
}

message DestroySessionRequest {
    string session_id = 1;
}

message SessionInfo {
    string id = 1;
    string name = 2;
    string repo_id = 3;
    string branch = 4;
    string worktree_path = 5;
    SessionStatus status = 6;
    optional string claude_session_id = 7;  // Associated Claude Code session ID
}

enum SessionStatus {
    SESSION_STATUS_UNKNOWN = 0;
    SESSION_STATUS_RUNNING = 1;
    SESSION_STATUS_STOPPED = 2;
}

// ============ Attach ============

message AttachInput {
    string session_id = 1;
    bytes data = 2;
    // Resize event
    optional uint32 rows = 3;
    optional uint32 cols = 4;
}

message AttachOutput {
    bytes data = 1;
}

// ============ Events ============

message SubscribeEventsRequest {
    // Filter by repo_id (optional, empty means all repos)
    optional string repo_id = 1;
}

message Event {
    oneof event {
        SessionCreatedEvent session_created = 1;
        SessionDestroyedEvent session_destroyed = 2;
        SessionNameUpdatedEvent session_name_updated = 3;
        SessionStatusChangedEvent session_status_changed = 4;
    }
}

message SessionCreatedEvent {
    SessionInfo session = 1;
}

message SessionDestroyedEvent {
    string session_id = 1;
    string repo_id = 2;
    string branch = 3;
}

message SessionNameUpdatedEvent {
    string session_id = 1;
    string old_name = 2;
    string new_name = 3;
}

message SessionStatusChangedEvent {
    string session_id = 1;
    SessionStatus old_status = 2;
    SessionStatus new_status = 3;
}

// ============ Diff ============

message GetDiffFilesRequest {
    string repo_id = 1;
    string branch = 2;  // worktree branch
}

message GetDiffFilesResponse {
    repeated DiffFileInfo files = 1;
}

message DiffFileInfo {
    string path = 1;
    FileStatus status = 2;
    int32 additions = 3;
    int32 deletions = 4;
}

enum FileStatus {
    FILE_STATUS_UNSPECIFIED = 0;
    FILE_STATUS_MODIFIED = 1;
    FILE_STATUS_ADDED = 2;
    FILE_STATUS_DELETED = 3;
    FILE_STATUS_RENAMED = 4;
    FILE_STATUS_UNTRACKED = 5;
}

message GetFileDiffRequest {
    string repo_id = 1;
    string branch = 2;
    string file_path = 3;
}

message GetFileDiffResponse {
    string file_path = 1;
    repeated DiffLine lines = 2;
}

message DiffLine {
    LineType line_type = 1;
    string content = 2;
    optional int32 old_lineno = 3;  // Line number in old file
    optional int32 new_lineno = 4;  // Line number in new file
}

enum LineType {
    LINE_TYPE_UNSPECIFIED = 0;
    LINE_TYPE_HEADER = 1;     // @@ ... @@
    LINE_TYPE_CONTEXT = 2;    // unchanged
    LINE_TYPE_ADDITION = 3;   // +
    LINE_TYPE_DELETION = 4;   // -
}
